# SARA

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
analysis/: compare_outputs.py
config/dataset/: SQuAD-v2.yaml  code_rag_humaneval.yaml  code_rag_humaneval_with_retrieval.yaml  gsm8k.yaml  gsm8k_with_retrieval.yaml  hotpotqa.yaml  longbench-2wikimqa.yaml  longbench-multi_news.yaml  longbench-multifieldqa_en.yaml  longbench-qmsum.yaml  narrativeqa.yaml  qasper.yaml  qasper_dev.yaml  quality.yaml  quality_multi-choice.yaml  triviaqa.yaml
config/language_modeling/: Finetune_Llama-3.1-8B-Instruct_Compress.yaml  Finetune_Llama-3.1-8B-Instruct_QA_Compress_Stage0_LongBench-qmsum.yaml  Finetune_Llama-3.1-8B-Instruct_QA_Compress_Stage0_QuALITY.yaml  Finetune_RAG_qasper_pubbase.yaml  Finetune_SARA_qasper_pubbase.yaml  Finetune_Stage0_Llama-3.1-8B-Instruct.yaml  Finetune_Stage0_Mistral7B.yaml  Finetune_Stage0_Mistral7B_Linq.yaml  Finetune_Stage0_Mistral7B_LongBench-qmsum.yaml  Finetune_Stage0_Mistral7B_QuALITY.yaml  Finetune_Stage0_Mistral7B_Stella.yaml  Finetune_Stage0_Mistral7B_gte.yaml  Finetune_Stage0_MistralNemo.yaml  Finetune_Stage0_MistralSmall.yaml  Finetune_Stage1_Llama-3.1-8B-Instruct.yaml  Finetune_Stage1_Mistral7B.yaml  Finetune_Stage2_Llama-3.1-8B-Instruct.yaml  Finetune_Stage2_Mistral7B.yaml  Paragraph_Llama.yaml  Paragraph_Mistral7B.yaml  Paragraph_MistralNemo.yaml  Paragraph_MistralSmall.yaml  eval.yaml  (+9 more)
sara_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: arguments.py  const.py  prompts.py  run_sara.py
(+78 files in other folders)
